feat: add responsive navbar and footer

--- a/src/components/layout/BaseLayout.astro
+++ b/src/components/layout/BaseLayout.astro
@@ -1,22 +1,26 @@
 ---
-import '../../styles/tokens.css';
-import '../../styles/base.css';
-import SEOHead from './SEOHead.astro';
+import "../../styles/tokens.css";
+import "../../styles/base.css";
+import SEOHead from "./SEOHead.astro";
+import Navbar from "./Navbar.astro";
+import Footer from "./Footer.astro";
 
-const { title, description, lang = 'es', image, type } = Astro.props;
+const { title, description, lang = "es", image, type } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang={lang}>
-	<head>
-        <SEOHead 
-          title={title} 
-          description={description || "Personal Site"} 
-          image={image}
-          type={type}
-        />
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <SEOHead
+      title={title}
+      description={description || "Personal Site"}
+      image={image}
+      type={type}
+    />
+  </head>
+  <body>
+    <Navbar lang={lang} />
+    <slot />
+    <Footer lang={lang} />
+  </body>
 </html>
