feat: improve ux, social links and add lang switcher

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -19,16 +19,20 @@ const currentYear = new Date().getFullYear();
         <div class="footer-col">
             <div class="social-links">
                 <a
-                    href="https://github.com/jrevilla"
+                    href="https://github.com/jrevillaa"
                     target="_blank"
                     rel="noopener noreferrer">GitHub</a
                 >
                 <a
-                    href="https://linkedin.com/in/jrevilla"
+                    href="https://www.linkedin.com/in/jrevillaa/"
                     target="_blank"
                     rel="noopener noreferrer">LinkedIn</a
                 >
-                <a href={`mailto:jrevilla492@gmail.com`}>Email</a>
+                <a
+                    href="https://wa.me/51987866987"
+                    target="_blank"
+                    rel="noopener noreferrer">WhatsApp</a
+                >
             </div>
         </div>
     </div>
