--- a/src/pages/es/plugins/index.astro
+++ b/src/pages/es/plugins/index.astro
@@ -1,4 +1,5 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../../../components/layout/BaseLayout.astro";
 import PluginCard from "../../../components/ui/PluginCard.astro";
 import ConfidentialityNote from "../../../components/ui/ConfidentialityNote.astro";
