--- a/src/pages/es/plugins/[slug].astro
+++ b/src/pages/es/plugins/[slug].astro
@@ -94,6 +94,7 @@ const { Content } = await plugin.render();
 
     .back-link-wrapper {
         margin-bottom: var(--space-6);
+        text-align: left;
     }
 
     .back-link {
